--- a/ViewModel e LiveData/app/build.gradle
+++ b/ViewModel e LiveData/app/build.gradle
@@ -1,15 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'dagger.hilt.android.plugin'
-    id 'kotlin-kapt'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.todo_example"
+        applicationId "com.example.viewmodel_livedata"
         minSdk 26
         targetSdk 32
         versionCode 1
@@ -17,10 +15,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-        // habilita o view binding
-        viewBinding{
-            enabled = true
-        }
+
+    viewBinding{
+        enabled = true
+    }
 
     buildTypes {
         release {
@@ -43,21 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    //Corrotinas
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
-
-    //Hilt
-    def hilt_version = "2.44"
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 }
