--- a/ViewModel e LiveData/app/src/main/AndroidManifest.xml
+++ b/ViewModel e LiveData/app/src/main/AndroidManifest.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.todo_example">
-
-    // Habilita permissão de uso de internet
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.viewmodel_livedata">
 
     <application
-        android:name=".TodoApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Todo_Example"
+        android:theme="@style/Theme.Viewmodel_livedata"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
